wp-content/themes/blankslate/style.css
/* ... */
.single .quote {
	margin-bottom: 0;
	width: auto;
	font-size: 1.875rem;
	font-weight: 800;
	padding-left: 30px;
	border-left: 10px solid black;
	line-height: 2.3125rem;
}

.single h3 {
	font-size: 1.375rem;
	font-weight: 700;
	line-height: 2.5rem;
}

.single .info {
	font-size: 0.875rem;
}

.line {
	border-top: 1px solid #dcdcdc;
	margin-bottom: 80px;
}

.button-up {
	display: block;
	margin: 0 auto 120px;
	width: 115px;
	padding: 8px 0 8px 0;
	border: 3px solid #ba3963;
	text-align: center;
	color: #ba3963;
	font-size: 0.875rem;
	font-weight: 600;
	text-transform: uppercase;
	line-height: 1rem;
}

.single .button-up {
	margin-top: 50px;
}

.button-up:hover {
	border-color: #fa6993;
}


a, a:hover {
	text-decoration: none;
}

footer {
	padding: 0 80px 40px 80px;
	position: relative;
	overflow-x: hidden;
}

footer .row.profile .columns.profile{
	max-width: 590px;
}

footer .row.profile img,
footer .row.profile p {
	padding-left: 15px;
}

footer .row.profile .row .column {
	margin-bottom: 30px;
}

footer .column-social {
}

footer .social-stuff {
	position: relative;
}

footer .social-icon-bottom {
	position: absolute;
	bottom: 0px;
	left: 0px;
}

footer .social-icon-top {
	position: absolute;
	top: 0px;
	left: 0px;
}

footer .social-icon {
	color: #ba3963;
	padding: 0 !important;
	margin-left: 60px !important;
}

footer .copy {
	font-size: 0.875rem;
	font-weight: 300;
	line-height: 1.15;
}

p.work-title {
	font-size: 1.5625rem;
	font-weight: 300;
	line-height: 1.5rem;
	padding: 0;
	margin: 0;
}

p.name {
	font-size: 1.25rem;
	line-height: 1.5rem;
	font-weight: 900;
	padding: 0;
	margin: 0 0 -2px 0;
}

.vertical-contact {
	position: absolute;
	left: 15px;
	margin-top: 170px;
	font-size: 40px !important;
	font-weight: 900;
    -ms-transform: rotate(-90deg); /* IE 9 */
    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
    transform: rotate(-90deg);
}


/* Small Only*/
@media screen and (max-width: 39.9375em) {

	#header {
		padding: 20px 20px 20px 20px;
	}

	.content {
		padding: 0 20px 0 20px;
	}

	footer {
		padding: 0 20px 20px 20px;
	}

	footer .social-icon {
		min-width: 200px;
		margin-left: 30px !important;
	}

	.logo {
		width: 50px;
		height: 50px;
	}

	.logo-icon {
		width: 50px;
		height: 50px;
	}

	.menu-burger {
		margin-top: 10px;
	}

	h1.projects {
		margin-bottom: 50px;
		font-size: 1.875rem;
	}

	.splash {
		margin-bottom: 100px;
	}

	.project a, .project a:active {
		font-size: 0.875rem;
	}

	.quote {
		margin-bottom: 65px;
	}

	.quote .quote-icon {
		margin-top: 60px;
		font-size: 8.125rem;
		margin-left: -8px;
		padding-left: 0;
	}

	.quote .quote-text {
		font-size: 1.375rem;
		padding-left: 0;
	}

	.about h2 {
		font-size: 1.25rem;
		font-weight: 700;
		padding-left: 0;
	}

	.about p {
		font-size: 1.125rem;
		padding-left: 0;
		margin-bottom: 0;
		font-weight: 300;
	}

	.line {
		margin-bottom: 50px;
	}

	p.work-title {
		font-size: 1.25rem;
	}

	p.name {
		font-size: 1.125rem;
	}

	footer .copy {
		margin-top: -5px;
		font-size: 0.75rem;
	}

	.project .title-left-down,
	.project .title-right,
	.project .title-left {
		max-width: 164px;
	}

	.splash {
		height: 258px;
	}

	.project {
		margin-bottom: 20px !important;
		min-height: 0;
	}
	footer .row.profile .row .column {
    	margin-bottom: 20px !important;
	}
	footer .social-icon {
	    min-width: 200px;
	    margin-left: 20px !important;
	}
	.menu-block ul {
		margin: 20px 20px;
	}

	.menu-block ul li {
		text-align: right;
		font-size: 1rem;
	}

	.menu-block ul a {
		font-size: 2.5rem;
	}

	.menu-block .menu-cross{
		text-align: right;
		margin: 30px 20px 0 0;
	}

	.menu-block .logo {
		text-align: left;
		margin: 20px 0 0 20px;
	}

	.single h1.title {
		font-size: 1.25rem;
		margin-bottom: 30px;
	}

	.single .category {
		font-size: 1.5625rem;
		margin-top: 10px;
	}

	.single .single-image {
		margin-bottom: 50px;
	}

}

/* Medium and up */
@media screen and (min-width: 40em) {
}

/* Medium only */
@media screen and (min-width: 40em) and (max-width: 63.9375em) {}

/* Medium and down */
@media only screen and (max-width: 64em) { 
	.project-bottom {
		position: relative;
		bottom: 0;
	}
	.margin-left {
		margin-left: 0;		
	}
	.margin-right {
		margin-right: 0;		
	}
	.project img {
		width: 100%;
	}
	.project {
		margin-bottom: 30px;
		min-height: 0;
	}
	.project-small {
		max-width: none;
		position: inherit;
	}
	.project-side-column {
		display:block;
	}

	.quote, .about {
		width: auto;
	}

	.hide-for-medium-down {
		display: none !important;
	}

	.quote .quote-icon {
		margin-left: -8px;
		padding-left: 0;
	}

	.quote .quote-text {
		padding-left: 0;
	}

	.about {
		margin-bottom: 20px;
	}

	.about h2 {
		padding-left: 0;
	}

	.about p {
		padding-left: 0;

	}

	.button-up {
		margin-bottom: 60px;
	}
}

/* Large and up */
@media screen and (min-width: 64em) {
	.show-for-medium-down {
		display: none !important;
	}
}

/* Large only */
@media screen and (min-width: 64em) and (max-width: 74.9375em) {
	div.contact ul li {
		padding-left: 18px;
	}
}

/* Large and down */
@media only screen and (max-width: 75em) { 
	.hide-for-large-down {
		display: none !important;
	}
}

/* Above Large */
@media screen and (min-width: 75em) {
	.show-for-large-down {
		display: none !important;
	}
}

